--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -104,8 +104,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <div class="h6 mb-0 text-gray-800">Player Name</div>
-                                        <select id="playerNameDropdown" class="btn btn-primary dropdown-toggle"></select>
+                                        <div class="h6 mb-0 text-gray-800">Player Type</div>
+                                        <select id="playerTypeDropdown" class="btn btn-primary dropdown-toggle"></select>
                                     </div>
 
 
