--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -49,9 +49,13 @@
                                 <form class="user">
                                   <div class="form-group row">
 
-                                      <div class="mb-2">
+                                      <div class="row mb-2">
                                           <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">Opposing Team Name</div>
+                                          <a href="#" class="btn">
+                                              <span id="inputTitleSettings" onclick="displayOBSLocalFile(this)" class="dropbtn material-icons icon-size-small">settings</span>
+                                          </a>
                                       </div>
+
 
                                   </div>
                                   <div class ="mb-2">
@@ -132,6 +136,7 @@
 
                                     <div class="form-group">
                                         <div class="h6 mb-0 text-gray-800">Player Name</div>
+
                                         <select id="playerNameDropdown" class="btn btn-primary dropdown-toggle"></select>
                                     </div>
 
@@ -222,15 +227,16 @@
 
   </body>
   <script src="../scripts/GameBaseFunctionality.js"></script>
+  <!-- <script type="text/javascript" src="../index.js"></script> -->
+
   <!-- <script>document.write('<script src="../scripts/GameBaseFunctionality.js?dev=' + Math.floor(Math.random() * 100) + '"\><\/script>');</script> -->
 
-
   <!-- Bootstrap core JavaScript-->
-  <script src="../vendor/jquery/jquery.min.js"></script>
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
   <!-- Core plugin JavaScript-->
-  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- <script src="../vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
   <!-- Custom scripts for all pages-->
   <!-- <script src="js/sb-admin-2.min.js"></script> -->
