--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="index.css" />
 
 
-
     <!-- Custom fonts for this template-->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link
@@ -111,5 +110,6 @@
 
   </body>
   <script src="scripts/GameBaseFunctionality.js"></script>
+  <!-- <script src="./renderer.js"></script> -->
 
 </html>
