alerts for where the text files are

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -51,8 +51,8 @@
 
                                       <div class="row mb-2">
                                           <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">Opposing Team Name</div>
-                                          <a href="#" class="btn">
-                                              <span id="inputTitleSettings" onclick="displayOBSLocalFile(this)" class="dropbtn material-icons icon-size-small">settings</span>
+                                          <a class="btn">
+                                              <span id="inputTitleSettings" onclick="displayOBSLocalFile(this)" class="dropbtn material-icons icon-size-small">help</span>
                                           </a>
                                       </div>
 
@@ -119,6 +119,10 @@
 
                                       <a href="#" class="btn btn-primary btn-circle">
                                           <span onclick="addNewRoster()" class="filter-btn dropbtn material-icons icon-size-small">add</span>
+                                      </a>
+
+                                      <a class="btn">
+                                          <span id="rosterSettings" onclick="displayOBSLocalFile(this)" class="dropbtn material-icons icon-size-small">help</span>
                                       </a>
 
 
