--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -222,6 +222,14 @@
 
                 </div>
               </div>
+
+              <!-- mobalytics cards -->
+              <iframe id="Top" src="https://obs.mobalytics.gg/user/cbTwrZ7Ccnn4ftLNG39ZAg" width="300" height="300"></iframe>
+              <iframe id="Middle" src="https://obs.mobalytics.gg/user/cbTwrZ7Ccnn4ftLNG39ZAg" width="300" height="300"></iframe>
+              <iframe id="Support" src="https://obs.mobalytics.gg/user/cbTwrZ7Ccnn4ftLNG39ZAg" width="300" height="300"></iframe>
+              <iframe id="ADC" src="https://obs.mobalytics.gg/user/cbTwrZ7Ccnn4ftLNG39ZAg" width="300" height="300"></iframe>
+              <iframe id="Jungle" src="https://obs.mobalytics.gg/user/cbTwrZ7Ccnn4ftLNG39ZAg" width="300" height="300"></iframe>
+
     </div>
 
 
