--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -168,6 +168,19 @@
 
                                     </div>
 
+                                  <div class="row">
+
+                                    <div class="h3 mb-0 font-weight-bold text-gray-800">Scoreboard</div>
+
+                                    <div class="row form-group">
+                                      <span id="subtractHome" onclick="updateScoreboard('subtractHome')" class="btn btn-secondary">- Home</span>
+                                      <span id="addHome" onclick="updateScoreboard('addHome')" class="btn btn-secondary margin-right">+ Home</span>
+                                      <span id="subtractVisitor" onclick="updateScoreboard('subtractVisitor')" class="btn btn-secondary margin-right">- Visitor</span>
+                                      <span id="addVisitor" onclick="updateScoreboard('addVisitor')" class="btn btn-secondary margin-right">+ Visitor</span>
+
+                                    </div>
+                                  </div>
+
 
                                   <!-- end of dropdowns-->
 
